Step 3 - BISON/spl.output
Grammar

    0 $accept: program $end

    1 program: identifier COLON block ENDP identifier FULLSTOP

    2 block: DECLARATIONS declaration_block CODE statement_list
    3      | CODE statement_list

    4 identifier: LETTER
    5           | identifier LETTER
    6           | identifier DIGIT

    7 identifier_list: identifier
    8                | identifier_list COMMA identifier

    9 declaration_block: identifier_list OF TYPE type SEMICOLON
   10                  | declaration_block identifier_list OF TYPE type SEMICOLON

   11 type: CHARACTER
   12     | INTEGER
   13     | REAL

   14 statement_list: statement
   15               | statement_list SEMICOLON statement

   16 statement: assignment_statement
   17          | if_statement
   18          | do_statement
   19          | while_statement
   20          | for_statement
   21          | write_statement
   22          | read_statement

   23 assignment_statement: expression ASSIGN identifier

   24 if_statement: IF conditional THEN statement_list ENDIF
   25             | IF conditional THEN statement_list ELSE statement_list ENDIF

   26 do_statement: DO statement_list WHILE conditional ENDDO

   27 while_statement: WHILE conditional DO statement_list ENDWHILE

   28 for_statement: FOR identifier IS expression BY expression TO expression DO statement_list ENDFOR

   29 write_statement: WRITE BRA output_list KET
   30                | NEWLINE

   31 read_statement: READ BRA identifier KET

   32 output_list: value
   33            | output_list COMMA value

   34 logical_operator: AND
   35                 | OR

   36 basic_conditional: expression comparator expression
   37                  | NOT basic_conditional

   38 conditional: basic_conditional
   39            | conditional logical_operator basic_conditional

   40 comparator: EQUAL
   41           | NOT_EQUAL
   42           | LESS_THAN
   43           | GREATER_THAN
   44           | LESS_THAN_OR_EQUAL
   45           | GREATER_THAN_OR_EQUAL

   46 expression: term
   47           | expression PLUS term
   48           | expression MINUS term

   49 term: value
   50     | term TIMES value
   51     | term DIVIDE value

   52 value: identifier
   53      | constant
   54      | BRA expression KET

   55 constant: number_constant
   56         | character_constant

   57 character_constant: APOSTROPHE LETTER APOSTROPHE

   58 number_constant: MINUS DIGIT
   59                | DIGIT
   60                | FULLSTOP DIGIT
   61                | number_constant DIGIT
   62                | number_constant FULLSTOP DIGIT


Terminals, with rules where they appear

$end (0) 0
error (256)
FULLSTOP (258) 1 60 62
COMMA (259) 8 33
COLON (260) 1
SEMICOLON (261) 9 10 15
ASSIGN (262) 23
BRA (263) 29 31 54
KET (264) 29 31 54
EQUAL (265) 40
NOT_EQUAL (266) 41
LESS_THAN (267) 42
GREATER_THAN (268) 43
LESS_THAN_OR_EQUAL (269) 44
GREATER_THAN_OR_EQUAL (270) 45
PLUS (271) 47
MINUS (272) 48 58
TIMES (273) 50
DIVIDE (274) 51
APOSTROPHE (275) 57
ENDP (276) 1
DECLARATIONS (277) 2
CODE (278) 2 3
OF (279) 9 10
TYPE (280) 9 10
CHARACTER (281) 11
INTEGER (282) 12
REAL (283) 13
IF (284) 24 25
THEN (285) 24 25
ENDIF (286) 24 25
ELSE (287) 25
DO (288) 26 27 28
WHILE (289) 26 27
ENDDO (290) 26
ENDWHILE (291) 27
FOR (292) 28
IS (293) 28
BY (294) 28
TO (295) 28
ENDFOR (296) 28
WRITE (297) 29
READ (298) 31
NEWLINE (299) 30
NOT (300) 37
AND (301) 34
OR (302) 35
LETTER (303) 4 5 57
DIGIT (304) 6 58 59 60 61 62


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
block (52)
    on left: 2 3, on right: 1
identifier (53)
    on left: 4 5 6, on right: 1 5 6 7 8 23 28 31 52
identifier_list (54)
    on left: 7 8, on right: 8 9 10
declaration_block (55)
    on left: 9 10, on right: 2 10
type (56)
    on left: 11 12 13, on right: 9 10
statement_list (57)
    on left: 14 15, on right: 2 3 15 24 25 26 27 28
statement (58)
    on left: 16 17 18 19 20 21 22, on right: 14 15
assignment_statement (59)
    on left: 23, on right: 16
if_statement (60)
    on left: 24 25, on right: 17
do_statement (61)
    on left: 26, on right: 18
while_statement (62)
    on left: 27, on right: 19
for_statement (63)
    on left: 28, on right: 20
write_statement (64)
    on left: 29 30, on right: 21
read_statement (65)
    on left: 31, on right: 22
output_list (66)
    on left: 32 33, on right: 29 33
logical_operator (67)
    on left: 34 35, on right: 39
basic_conditional (68)
    on left: 36 37, on right: 37 38 39
conditional (69)
    on left: 38 39, on right: 24 25 26 27 39
comparator (70)
    on left: 40 41 42 43 44 45, on right: 36
expression (71)
    on left: 46 47 48, on right: 23 28 36 47 48 54
term (72)
    on left: 49 50 51, on right: 46 47 48 50 51
value (73)
    on left: 52 53 54, on right: 32 33 49 50 51
constant (74)
    on left: 55 56, on right: 53
character_constant (75)
    on left: 57, on right: 56
number_constant (76)
    on left: 58 59 60 61 62, on right: 55 61 62


State 0

    0 $accept: . program $end

    LETTER  shift, and go to state 1

    program     go to state 2
    identifier  go to state 3


State 1

    4 identifier: LETTER .

    $default  reduce using rule 4 (identifier)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: identifier . COLON block ENDP identifier FULLSTOP
    5 identifier: identifier . LETTER
    6           | identifier . DIGIT

    COLON   shift, and go to state 5
    LETTER  shift, and go to state 6
    DIGIT   shift, and go to state 7


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: identifier COLON . block ENDP identifier FULLSTOP

    DECLARATIONS  shift, and go to state 8
    CODE          shift, and go to state 9

    block  go to state 10


State 6

    5 identifier: identifier LETTER .

    $default  reduce using rule 5 (identifier)


State 7

    6 identifier: identifier DIGIT .

    $default  reduce using rule 6 (identifier)


State 8

    2 block: DECLARATIONS . declaration_block CODE statement_list

    LETTER  shift, and go to state 1

    identifier         go to state 11
    identifier_list    go to state 12
    declaration_block  go to state 13


State 9

    3 block: CODE . statement_list

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    IF          shift, and go to state 18
    DO          shift, and go to state 19
    WHILE       shift, and go to state 20
    FOR         shift, and go to state 21
    WRITE       shift, and go to state 22
    READ        shift, and go to state 23
    NEWLINE     shift, and go to state 24
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier            go to state 26
    statement_list        go to state 27
    statement             go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    do_statement          go to state 31
    while_statement       go to state 32
    for_statement         go to state 33
    write_statement       go to state 34
    read_statement        go to state 35
    expression            go to state 36
    term                  go to state 37
    value                 go to state 38
    constant              go to state 39
    character_constant    go to state 40
    number_constant       go to state 41


State 10

    1 program: identifier COLON block . ENDP identifier FULLSTOP

    ENDP  shift, and go to state 42


State 11

    5 identifier: identifier . LETTER
    6           | identifier . DIGIT
    7 identifier_list: identifier .

    LETTER  shift, and go to state 6
    DIGIT   shift, and go to state 7

    $default  reduce using rule 7 (identifier_list)


State 12

    8 identifier_list: identifier_list . COMMA identifier
    9 declaration_block: identifier_list . OF TYPE type SEMICOLON

    COMMA  shift, and go to state 43
    OF     shift, and go to state 44


State 13

    2 block: DECLARATIONS declaration_block . CODE statement_list
   10 declaration_block: declaration_block . identifier_list OF TYPE type SEMICOLON

    CODE    shift, and go to state 45
    LETTER  shift, and go to state 1

    identifier       go to state 11
    identifier_list  go to state 46


State 14

   60 number_constant: FULLSTOP . DIGIT

    DIGIT  shift, and go to state 47


State 15

   54 value: BRA . expression KET

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    expression          go to state 48
    term                go to state 37
    value               go to state 38
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 16

   58 number_constant: MINUS . DIGIT

    DIGIT  shift, and go to state 49


State 17

   57 character_constant: APOSTROPHE . LETTER APOSTROPHE

    LETTER  shift, and go to state 50


State 18

   24 if_statement: IF . conditional THEN statement_list ENDIF
   25             | IF . conditional THEN statement_list ELSE statement_list ENDIF

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    NOT         shift, and go to state 51
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    basic_conditional   go to state 52
    conditional         go to state 53
    expression          go to state 54
    term                go to state 37
    value               go to state 38
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 19

   26 do_statement: DO . statement_list WHILE conditional ENDDO

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    IF          shift, and go to state 18
    DO          shift, and go to state 19
    WHILE       shift, and go to state 20
    FOR         shift, and go to state 21
    WRITE       shift, and go to state 22
    READ        shift, and go to state 23
    NEWLINE     shift, and go to state 24
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier            go to state 26
    statement_list        go to state 55
    statement             go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    do_statement          go to state 31
    while_statement       go to state 32
    for_statement         go to state 33
    write_statement       go to state 34
    read_statement        go to state 35
    expression            go to state 36
    term                  go to state 37
    value                 go to state 38
    constant              go to state 39
    character_constant    go to state 40
    number_constant       go to state 41


State 20

   27 while_statement: WHILE . conditional DO statement_list ENDWHILE

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    NOT         shift, and go to state 51
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    basic_conditional   go to state 52
    conditional         go to state 56
    expression          go to state 54
    term                go to state 37
    value               go to state 38
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 21

   28 for_statement: FOR . identifier IS expression BY expression TO expression DO statement_list ENDFOR

    LETTER  shift, and go to state 1

    identifier  go to state 57


State 22

   29 write_statement: WRITE . BRA output_list KET

    BRA  shift, and go to state 58


State 23

   31 read_statement: READ . BRA identifier KET

    BRA  shift, and go to state 59


State 24

   30 write_statement: NEWLINE .

    $default  reduce using rule 30 (write_statement)


State 25

   59 number_constant: DIGIT .

    $default  reduce using rule 59 (number_constant)


State 26

    5 identifier: identifier . LETTER
    6           | identifier . DIGIT
   52 value: identifier .

    LETTER  shift, and go to state 6
    DIGIT   shift, and go to state 7

    $default  reduce using rule 52 (value)


State 27

    3 block: CODE statement_list .
   15 statement_list: statement_list . SEMICOLON statement

    SEMICOLON  shift, and go to state 60

    $default  reduce using rule 3 (block)


State 28

   14 statement_list: statement .

    $default  reduce using rule 14 (statement_list)


State 29

   16 statement: assignment_statement .

    $default  reduce using rule 16 (statement)


State 30

   17 statement: if_statement .

    $default  reduce using rule 17 (statement)


State 31

   18 statement: do_statement .

    $default  reduce using rule 18 (statement)


State 32

   19 statement: while_statement .

    $default  reduce using rule 19 (statement)


State 33

   20 statement: for_statement .

    $default  reduce using rule 20 (statement)


State 34

   21 statement: write_statement .

    $default  reduce using rule 21 (statement)


State 35

   22 statement: read_statement .

    $default  reduce using rule 22 (statement)


State 36

   23 assignment_statement: expression . ASSIGN identifier
   47 expression: expression . PLUS term
   48           | expression . MINUS term

    ASSIGN  shift, and go to state 61
    PLUS    shift, and go to state 62
    MINUS   shift, and go to state 63


State 37

   46 expression: term .
   50 term: term . TIMES value
   51     | term . DIVIDE value

    TIMES   shift, and go to state 64
    DIVIDE  shift, and go to state 65

    $default  reduce using rule 46 (expression)


State 38

   49 term: value .

    $default  reduce using rule 49 (term)


State 39

   53 value: constant .

    $default  reduce using rule 53 (value)


State 40

   56 constant: character_constant .

    $default  reduce using rule 56 (constant)


State 41

   55 constant: number_constant .
   61 number_constant: number_constant . DIGIT
   62                | number_constant . FULLSTOP DIGIT

    FULLSTOP  shift, and go to state 66
    DIGIT     shift, and go to state 67

    $default  reduce using rule 55 (constant)


State 42

    1 program: identifier COLON block ENDP . identifier FULLSTOP

    LETTER  shift, and go to state 1

    identifier  go to state 68


State 43

    8 identifier_list: identifier_list COMMA . identifier

    LETTER  shift, and go to state 1

    identifier  go to state 69


State 44

    9 declaration_block: identifier_list OF . TYPE type SEMICOLON

    TYPE  shift, and go to state 70


State 45

    2 block: DECLARATIONS declaration_block CODE . statement_list

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    IF          shift, and go to state 18
    DO          shift, and go to state 19
    WHILE       shift, and go to state 20
    FOR         shift, and go to state 21
    WRITE       shift, and go to state 22
    READ        shift, and go to state 23
    NEWLINE     shift, and go to state 24
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier            go to state 26
    statement_list        go to state 71
    statement             go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    do_statement          go to state 31
    while_statement       go to state 32
    for_statement         go to state 33
    write_statement       go to state 34
    read_statement        go to state 35
    expression            go to state 36
    term                  go to state 37
    value                 go to state 38
    constant              go to state 39
    character_constant    go to state 40
    number_constant       go to state 41


State 46

    8 identifier_list: identifier_list . COMMA identifier
   10 declaration_block: declaration_block identifier_list . OF TYPE type SEMICOLON

    COMMA  shift, and go to state 43
    OF     shift, and go to state 72


State 47

   60 number_constant: FULLSTOP DIGIT .

    $default  reduce using rule 60 (number_constant)


State 48

   47 expression: expression . PLUS term
   48           | expression . MINUS term
   54 value: BRA expression . KET

    KET    shift, and go to state 73
    PLUS   shift, and go to state 62
    MINUS  shift, and go to state 63


State 49

   58 number_constant: MINUS DIGIT .

    $default  reduce using rule 58 (number_constant)


State 50

   57 character_constant: APOSTROPHE LETTER . APOSTROPHE

    APOSTROPHE  shift, and go to state 74


State 51

   37 basic_conditional: NOT . basic_conditional

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    NOT         shift, and go to state 51
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    basic_conditional   go to state 75
    expression          go to state 54
    term                go to state 37
    value               go to state 38
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 52

   38 conditional: basic_conditional .

    $default  reduce using rule 38 (conditional)


State 53

   24 if_statement: IF conditional . THEN statement_list ENDIF
   25             | IF conditional . THEN statement_list ELSE statement_list ENDIF
   39 conditional: conditional . logical_operator basic_conditional

    THEN  shift, and go to state 76
    AND   shift, and go to state 77
    OR    shift, and go to state 78

    logical_operator  go to state 79


State 54

   36 basic_conditional: expression . comparator expression
   47 expression: expression . PLUS term
   48           | expression . MINUS term

    EQUAL                  shift, and go to state 80
    NOT_EQUAL              shift, and go to state 81
    LESS_THAN              shift, and go to state 82
    GREATER_THAN           shift, and go to state 83
    LESS_THAN_OR_EQUAL     shift, and go to state 84
    GREATER_THAN_OR_EQUAL  shift, and go to state 85
    PLUS                   shift, and go to state 62
    MINUS                  shift, and go to state 63

    comparator  go to state 86


State 55

   15 statement_list: statement_list . SEMICOLON statement
   26 do_statement: DO statement_list . WHILE conditional ENDDO

    SEMICOLON  shift, and go to state 60
    WHILE      shift, and go to state 87


State 56

   27 while_statement: WHILE conditional . DO statement_list ENDWHILE
   39 conditional: conditional . logical_operator basic_conditional

    DO   shift, and go to state 88
    AND  shift, and go to state 77
    OR   shift, and go to state 78

    logical_operator  go to state 79


State 57

    5 identifier: identifier . LETTER
    6           | identifier . DIGIT
   28 for_statement: FOR identifier . IS expression BY expression TO expression DO statement_list ENDFOR

    IS      shift, and go to state 89
    LETTER  shift, and go to state 6
    DIGIT   shift, and go to state 7


State 58

   29 write_statement: WRITE BRA . output_list KET

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    output_list         go to state 90
    value               go to state 91
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 59

   31 read_statement: READ BRA . identifier KET

    LETTER  shift, and go to state 1

    identifier  go to state 92


State 60

   15 statement_list: statement_list SEMICOLON . statement

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    IF          shift, and go to state 18
    DO          shift, and go to state 19
    WHILE       shift, and go to state 20
    FOR         shift, and go to state 21
    WRITE       shift, and go to state 22
    READ        shift, and go to state 23
    NEWLINE     shift, and go to state 24
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier            go to state 26
    statement             go to state 93
    assignment_statement  go to state 29
    if_statement          go to state 30
    do_statement          go to state 31
    while_statement       go to state 32
    for_statement         go to state 33
    write_statement       go to state 34
    read_statement        go to state 35
    expression            go to state 36
    term                  go to state 37
    value                 go to state 38
    constant              go to state 39
    character_constant    go to state 40
    number_constant       go to state 41


State 61

   23 assignment_statement: expression ASSIGN . identifier

    LETTER  shift, and go to state 1

    identifier  go to state 94


State 62

   47 expression: expression PLUS . term

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    term                go to state 95
    value               go to state 38
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 63

   48 expression: expression MINUS . term

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    term                go to state 96
    value               go to state 38
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 64

   50 term: term TIMES . value

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    value               go to state 97
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 65

   51 term: term DIVIDE . value

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    value               go to state 98
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 66

   62 number_constant: number_constant FULLSTOP . DIGIT

    DIGIT  shift, and go to state 99


State 67

   61 number_constant: number_constant DIGIT .

    $default  reduce using rule 61 (number_constant)


State 68

    1 program: identifier COLON block ENDP identifier . FULLSTOP
    5 identifier: identifier . LETTER
    6           | identifier . DIGIT

    FULLSTOP  shift, and go to state 100
    LETTER    shift, and go to state 6
    DIGIT     shift, and go to state 7


State 69

    5 identifier: identifier . LETTER
    6           | identifier . DIGIT
    8 identifier_list: identifier_list COMMA identifier .

    LETTER  shift, and go to state 6
    DIGIT   shift, and go to state 7

    $default  reduce using rule 8 (identifier_list)


State 70

    9 declaration_block: identifier_list OF TYPE . type SEMICOLON

    CHARACTER  shift, and go to state 101
    INTEGER    shift, and go to state 102
    REAL       shift, and go to state 103

    type  go to state 104


State 71

    2 block: DECLARATIONS declaration_block CODE statement_list .
   15 statement_list: statement_list . SEMICOLON statement

    SEMICOLON  shift, and go to state 60

    $default  reduce using rule 2 (block)


State 72

   10 declaration_block: declaration_block identifier_list OF . TYPE type SEMICOLON

    TYPE  shift, and go to state 105


State 73

   54 value: BRA expression KET .

    $default  reduce using rule 54 (value)


State 74

   57 character_constant: APOSTROPHE LETTER APOSTROPHE .

    $default  reduce using rule 57 (character_constant)


State 75

   37 basic_conditional: NOT basic_conditional .

    $default  reduce using rule 37 (basic_conditional)


State 76

   24 if_statement: IF conditional THEN . statement_list ENDIF
   25             | IF conditional THEN . statement_list ELSE statement_list ENDIF

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    IF          shift, and go to state 18
    DO          shift, and go to state 19
    WHILE       shift, and go to state 20
    FOR         shift, and go to state 21
    WRITE       shift, and go to state 22
    READ        shift, and go to state 23
    NEWLINE     shift, and go to state 24
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier            go to state 26
    statement_list        go to state 106
    statement             go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    do_statement          go to state 31
    while_statement       go to state 32
    for_statement         go to state 33
    write_statement       go to state 34
    read_statement        go to state 35
    expression            go to state 36
    term                  go to state 37
    value                 go to state 38
    constant              go to state 39
    character_constant    go to state 40
    number_constant       go to state 41


State 77

   34 logical_operator: AND .

    $default  reduce using rule 34 (logical_operator)


State 78

   35 logical_operator: OR .

    $default  reduce using rule 35 (logical_operator)


State 79

   39 conditional: conditional logical_operator . basic_conditional

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    NOT         shift, and go to state 51
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    basic_conditional   go to state 107
    expression          go to state 54
    term                go to state 37
    value               go to state 38
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 80

   40 comparator: EQUAL .

    $default  reduce using rule 40 (comparator)


State 81

   41 comparator: NOT_EQUAL .

    $default  reduce using rule 41 (comparator)


State 82

   42 comparator: LESS_THAN .

    $default  reduce using rule 42 (comparator)


State 83

   43 comparator: GREATER_THAN .

    $default  reduce using rule 43 (comparator)


State 84

   44 comparator: LESS_THAN_OR_EQUAL .

    $default  reduce using rule 44 (comparator)


State 85

   45 comparator: GREATER_THAN_OR_EQUAL .

    $default  reduce using rule 45 (comparator)


State 86

   36 basic_conditional: expression comparator . expression

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    expression          go to state 108
    term                go to state 37
    value               go to state 38
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 87

   26 do_statement: DO statement_list WHILE . conditional ENDDO

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    NOT         shift, and go to state 51
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    basic_conditional   go to state 52
    conditional         go to state 109
    expression          go to state 54
    term                go to state 37
    value               go to state 38
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 88

   27 while_statement: WHILE conditional DO . statement_list ENDWHILE

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    IF          shift, and go to state 18
    DO          shift, and go to state 19
    WHILE       shift, and go to state 20
    FOR         shift, and go to state 21
    WRITE       shift, and go to state 22
    READ        shift, and go to state 23
    NEWLINE     shift, and go to state 24
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier            go to state 26
    statement_list        go to state 110
    statement             go to state 28
    assignment_statement  go to state 29
    if_statement          go to state 30
    do_statement          go to state 31
    while_statement       go to state 32
    for_statement         go to state 33
    write_statement       go to state 34
    read_statement        go to state 35
    expression            go to state 36
    term                  go to state 37
    value                 go to state 38
    constant              go to state 39
    character_constant    go to state 40
    number_constant       go to state 41


State 89

   28 for_statement: FOR identifier IS . expression BY expression TO expression DO statement_list ENDFOR

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25

    identifier          go to state 26
    expression          go to state 111
    term                go to state 37
    value               go to state 38
    constant            go to state 39
    character_constant  go to state 40
    number_constant     go to state 41


State 90

   29 write_statement: WRITE BRA output_list . KET
   33 output_list: output_list . COMMA value

    COMMA  shift, and go to state 112
    KET    shift, and go to state 113


State 91

   32 output_list: value .

    $default  reduce using rule 32 (output_list)


State 92

    5 identifier: identifier . LETTER
    6           | identifier . DIGIT
   31 read_statement: READ BRA identifier . KET

    KET     shift, and go to state 114
    LETTER  shift, and go to state 6
    DIGIT   shift, and go to state 7


State 93

   15 statement_list: statement_list SEMICOLON statement .

    $default  reduce using rule 15 (statement_list)


State 94

    5 identifier: identifier . LETTER
    6           | identifier . DIGIT
   23 assignment_statement: expression ASSIGN identifier .

    LETTER  shift, and go to state 6
    DIGIT   shift, and go to state 7

    $default  reduce using rule 23 (assignment_statement)


State 95

   47 expression: expression PLUS term .
   50 term: term . TIMES value
   51     | term . DIVIDE value

    TIMES   shift, and go to state 64
    DIVIDE  shift, and go to state 65

    $default  reduce using rule 47 (expression)


State 96

   48 expression: expression MINUS term .
   50 term: term . TIMES value
   51     | term . DIVIDE value

    TIMES   shift, and go to state 64
    DIVIDE  shift, and go to state 65

    $default  reduce using rule 48 (expression)


State 97

   50 term: term TIMES value .

    $default  reduce using rule 50 (term)


State 98

   51 term: term DIVIDE value .

    $default  reduce using rule 51 (term)


State 99

   62 number_constant: number_constant FULLSTOP DIGIT .

    $default  reduce using rule 62 (number_constant)


State 100

    1 program: identifier COLON block ENDP identifier FULLSTOP .

    $default  reduce using rule 1 (program)


State 101

   11 type: CHARACTER .

    $default  reduce using rule 11 (type)


State 102

   12 type: INTEGER .

    $default  reduce using rule 12 (type)


State 103

   13 type: REAL .

    $default  reduce using rule 13 (type)


State 104

    9 declaration_block: identifier_list OF TYPE type . SEMICOLON

    SEMICOLON  shift, and go to state 115


State 105

   10 declaration_block: declaration_block identifier_list OF TYPE . type SEMICOLON

    CHARACTER  shift, and go to state 101
    INTEGER    shift, and go to state 102
    REAL       shift, and go to state 103

    type  go to state 116


State 106

   15 statement_list: statement_list . SEMICOLON statement
   24 if_statement: IF conditional THEN statement_list . ENDIF
   25             | IF conditional THEN statement_list . ELSE statement_list ENDIF

    SEMICOLON  shift, and go to state 60
    ENDIF      shift, and go to state 117
    ELSE       shift, and go to state 118


State 107

   39 conditional: conditional logical_operator basic_conditional .

    $default  reduce using rule 39 (conditional)


State 108

   36 basic_conditional: expression comparator expression .
   47 expression: expression . PLUS term
   48           | expression . MINUS term

    PLUS   shift, and go to state 62
    MINUS  shift, and go to state 63

    $default  reduce using rule 36 (basic_conditional)


State 109

   26 do_statement: DO statement_list WHILE conditional . ENDDO
   39 conditional: conditional . logical_operator basic_conditional

    ENDDO  shift, and go to state 119
    AND    shift, and go to state 77
    OR     shift, and go to state 78

    logical_operator  go to state 79


State 110

   15 statement_list: statement_list . SEMICOLON statement
   27 while_statement: WHILE conditional DO statement_list . ENDWHILE

    SEMICOLON  shift, and go to state 60
    ENDWHILE   shift, and go to state 120


State 111

   28 for_statement: FOR identifier IS expression . BY expression TO expression DO statement_list ENDFOR
   47 expression: expression . PLUS term
   48           | expression . MINUS term

    PLUS   shift, and go to state 62
    MINUS  shift, and go to state 63
    BY     shift, and go to state 121


State 112

   33 output_list: output_list COMMA . value

    FULLSTOP    shift, and go to state 14
    BRA         shift, and go to state 15
    MINUS       shift, and go to state 16
    APOSTROPHE  shift, and go to state 17
    LETTER      shift, and go to state 1
    DIGIT       shift, and go to state 25
